--- a/wearables.yml
+++ b/wearables.yml
@@ -8,49 +8,86 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=1_gnu
+  - absl-py=1.0.0=pyhd8ed1ab_0
+  - aiohttp=3.8.1=py38h497a2fe_0
+  - aiosignal=1.2.0=pyhd8ed1ab_0
+  - alembic=1.7.5=pyhd8ed1ab_0
   - anyio=3.3.0=py38h578d9bd_0
   - argon2-cffi=20.1.0=py38h497a2fe_2
+  - arrow-cpp=4.0.1=py38hced866c_3
+  - async-timeout=4.0.2=pyhd8ed1ab_0
   - async_generator=1.10=py_0
   - attrs=21.2.0=pyhd8ed1ab_0
+  - autopage=0.4.0=pyhd8ed1ab_0
+  - aws-c-common=0.4.57=he6710b0_1
+  - aws-c-event-stream=0.1.6=h2531618_5
+  - aws-checksums=0.1.9=he6710b0_0
+  - aws-sdk-cpp=1.8.185=hce553d0_0
   - babel=2.9.1=pyh44b312d_0
   - backcall=0.2.0=pyh9f0ad1d_0
   - backports=1.0=py_2
   - backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
   - blas=1.0=mkl
   - bleach=4.0.0=pyhd8ed1ab_0
+  - blinker=1.4=py_1
+  - boost-cpp=1.73.0=h27cfd23_11
+  - brotli=1.0.9=he6710b0_2
   - brotlipy=0.7.0=py38h497a2fe_1001
   - bzip2=1.0.8=h7f98852_4
-  - ca-certificates=2021.5.30=ha878542_0
-  - certifi=2021.5.30=py38h578d9bd_0
+  - c-ares=1.18.1=h7f98852_0
+  - ca-certificates=2021.10.26=h06a4308_2
+  - cachetools=4.2.4=pyhd8ed1ab_0
+  - certifi=2021.10.8=py38h06a4308_0
   - cffi=1.14.6=py38ha65f79e_0
   - chardet=4.0.0=py38h578d9bd_1
   - charset-normalizer=2.0.0=pyhd8ed1ab_0
+  - click=8.0.3=py38h578d9bd_1
+  - cliff=3.10.0=pyhd8ed1ab_0
+  - cloudpickle=2.0.0=pyhd8ed1ab_0
+  - cmaes=0.8.2=pyh44b312d_0
+  - cmd2=2.3.3=py38h578d9bd_1
+  - colorama=0.4.4=pyh9f0ad1d_0
+  - colorlog=6.6.0=py38h578d9bd_0
   - common_cmplr_lib_rt=2021.3.0=intel_3350
   - common_cmplr_lic_rt=2021.3.0=intel_3350
   - cryptography=3.4.7=py38ha5dfef3_0
   - cudatoolkit=11.1.74=h6bb024c_0
   - cycler=0.10.0=py_2
+  - dataclasses=0.8=pyhc8e2a94_3
   - dbus=1.13.18=hb2f20db_0
   - debugpy=1.4.1=py38h709712a_0
   - decorator=5.0.9=pyhd8ed1ab_0
   - defusedxml=0.7.1=pyhd8ed1ab_0
+  - double-conversion=3.1.5=he6710b0_1
   - entrypoints=0.3=pyhd8ed1ab_1003
   - expat=2.4.1=h9c3ff4c_0
+  - fastparquet=0.5.0=py38hce1f21e_1
   - ffmpeg=4.3=hf484d3e_0
   - fontconfig=2.13.1=hba837de_1005
   - fortran_rt=2021.2.0=intel_610
   - freetype=2.10.4=h0708190_1
+  - frozenlist=1.2.0=py38h497a2fe_1
+  - fsspec=2021.11.1=pyhd8ed1ab_0
+  - future=0.18.2=py38h578d9bd_4
   - gettext=0.19.8.1=h0b5b191_1005
+  - gflags=2.2.2=he6710b0_0
   - glib=2.68.3=h9c3ff4c_0
   - glib-tools=2.68.3=h9c3ff4c_0
+  - glog=0.5.0=h2531618_0
   - gmp=6.2.1=h58526e2_0
   - gnutls=3.6.13=h85f3911_1
+  - google-auth=2.3.3=pyh6c4a22f_0
+  - google-auth-oauthlib=0.4.6=pyhd8ed1ab_0
+  - greenlet=1.1.2=py38h709712a_1
+  - grpc-cpp=1.26.0=hf8bcb03_0
+  - grpcio=1.38.1=py38hdd6454d_0
   - gst-plugins-base=1.14.0=hbbd80ab_1
   - gstreamer=1.14.0=h28cd5cc_2
   - icu=58.2=hf484d3e_1000
   - idna=3.1=pyhd3deb0d_0
   - impi_rt=2021.3.0=intel_294
   - importlib-metadata=4.6.3=py38h578d9bd_0
+  - importlib_resources=5.4.0=pyhd8ed1ab_0
   - intel-cmplr-lib-rt=2021.3.0=intel_3350
   - intel-cmplr-lic-rt=2021.3.0=intel_3350
   - intel-openmp=2021.3.0=h06a4308_3350
@@ -71,9 +108,15 @@ dependencies:
   - jupyterlab_pygments=0.1.2=pyh9f0ad1d_0
   - jupyterlab_server=2.7.0=pyhd8ed1ab_0
   - kiwisolver=1.3.1=py38h1fd1430_1
+  - krb5=1.19.2=hac12032_0
   - lame=3.100=h7f98852_1001
   - lcms2=2.12=h3be6417_0
   - ld_impl_linux-64=2.36.1=hea4e1c9_2
+  - libboost=1.73.0=h3ff78a5_11
+  - libcurl=7.80.0=h0b77cf5_0
+  - libedit=3.1.20210714=h7f8727e_0
+  - libev=4.33=h7f8727e_1
+  - libevent=2.1.8=h1ba5d50_1
   - libffi=3.3=h58526e2_2
   - libgcc-ng=11.1.0=hc902ee8_8
   - libgfortran-ng=7.5.0=h14aa051_19
@@ -82,9 +125,13 @@ dependencies:
   - libgomp=11.1.0=hc902ee8_8
   - libiconv=1.16=h516909a_0
   - libllvm10=10.0.1=he513fc3_3
+  - libnghttp2=1.46.0=hce63b2e_0
   - libpng=1.6.37=h21135ba_2
+  - libprotobuf=3.11.2=hd408876_0
   - libsodium=1.0.18=h36c2ea0_1
+  - libssh2=1.9.0=h1ba5d50_1
   - libstdcxx-ng=11.1.0=h56837e0_8
+  - libthrift=0.13.0=hfb8234f_6
   - libtiff=4.2.0=h85742a9_0
   - libuuid=2.32.1=h7f98852_1000
   - libuv=1.42.0=h7f98852_0
@@ -93,6 +140,8 @@ dependencies:
   - libxml2=2.9.12=h03d6c58_0
   - llvmlite=0.36.0=py38h4630a5e_0
   - lz4-c=1.9.3=h9c3ff4c_1
+  - mako=1.1.6=pyhd8ed1ab_0
+  - markdown=3.3.6=pyhd8ed1ab_0
   - markupsafe=2.0.1=py38h497a2fe_0
   - matplotlib=3.4.2=py38h578d9bd_0
   - matplotlib-base=3.4.2=py38hf4fb855_0
@@ -102,6 +151,7 @@ dependencies:
   - mkl-service=2.4.0=py38h497a2fe_0
   - mkl_fft=1.3.0=py38h42c9631_2
   - mkl_random=1.2.2=py38h1abd341_0
+  - multidict=5.2.0=py38h497a2fe_1
   - nbclassic=0.3.1=pyhd8ed1ab_1
   - nbclient=0.5.3=pyhd8ed1ab_0
   - nbconvert=6.1.0=py38h578d9bd_0
@@ -114,30 +164,42 @@ dependencies:
   - numba=0.53.1=py38h8b71fd7_1
   - numpy=1.20.3=py38hf144106_0
   - numpy-base=1.20.3=py38h74d4b33_0
+  - oauthlib=3.1.1=pyhd8ed1ab_0
   - olefile=0.46=pyh9f0ad1d_1
   - openh264=2.1.1=h780b84a_0
   - openjpeg=2.4.0=hb52868f_1
-  - openssl=1.1.1k=h7f98852_1
+  - openssl=1.1.1l=h7f8727e_0
+  - optuna=2.10.0=pyhd8ed1ab_0
+  - orc=1.6.7=h973521d_2
   - packaging=21.0=pyhd8ed1ab_0
   - pandas=1.3.1=py38h1abd341_0
   - pandoc=2.14.1=h7f98852_0
   - pandocfilters=1.4.2=py_1
   - parso=0.8.2=pyhd8ed1ab_0
   - patsy=0.5.1=py_0
+  - pbr=5.8.0=pyhd8ed1ab_1
   - pcre=8.45=h9c3ff4c_0
   - pexpect=4.8.0=pyh9f0ad1d_2
   - pickleshare=0.7.5=py_1003
   - pillow=8.3.1=py38h2c7a002_0
   - pip=21.2.3=pyhd8ed1ab_0
+  - prettytable=0.7.2=py_3
   - prometheus_client=0.11.0=pyhd8ed1ab_0
   - prompt-toolkit=3.0.19=pyha770c72_0
+  - protobuf=3.11.2=py38he6710b0_0
   - pthread-stubs=0.4=h36c2ea0_1001
   - ptyprocess=0.7.0=pyhd3deb0d_0
+  - pyarrow=4.0.1=py38he0739d4_3
+  - pyasn1=0.4.8=py_0
+  - pyasn1-modules=0.2.7=py_0
   - pycparser=2.20=pyh9f0ad1d_2
+  - pydeprecate=0.3.1=pyhd8ed1ab_0
   - pygments=2.9.0=pyhd8ed1ab_0
+  - pyjwt=2.3.0=pyhd8ed1ab_1
   - pynndescent=0.5.4=pyh6c4a22f_0
   - pyopenssl=20.0.1=pyhd8ed1ab_0
   - pyparsing=2.4.7=pyh9f0ad1d_0
+  - pyperclip=1.8.2=pyhd8ed1ab_2
   - pyqt=5.9.2=py38h05f1152_4
   - pyrsistent=0.17.3=py38h497a2fe_2
   - pysocks=1.7.1=py38h578d9bd_3
@@ -145,12 +207,19 @@ dependencies:
   - python-dateutil=2.8.2=pyhd8ed1ab_0
   - python_abi=3.8=2_cp38
   - pytorch=1.9.0=py3.8_cuda11.1_cudnn8.0.5_0
+  - pytorch-forecasting=0.9.2=pyhd8ed1ab_0
+  - pytorch-lightning=1.5.7=pyhd8ed1ab_0
   - pytz=2021.1=pyhd8ed1ab_0
+  - pyu2f=0.1.5=pyhd8ed1ab_0
+  - pyyaml=6.0=py38h497a2fe_3
   - pyzmq=22.2.1=py38h2035c66_0
   - qt=5.9.7=h5867ecd_1
+  - re2=2020.11.01=h2531618_1
   - readline=8.1=h46c0cb4_0
   - requests=2.26.0=pyhd8ed1ab_0
+  - requests-oauthlib=1.3.0=pyh9f0ad1d_0
   - requests-unixsocket=0.2.0=py_0
+  - rsa=4.8=pyhd8ed1ab_0
   - scikit-learn=0.24.2=py38ha9443f7_0
   - scipy=1.6.2=py38had2a1c9_1
   - seaborn=0.11.1=hd8ed1ab_1
@@ -159,28 +228,43 @@ dependencies:
   - setuptools=49.6.0=py38h578d9bd_3
   - sip=4.19.13=py38he6710b0_0
   - six=1.16.0=pyh6c4a22f_0
+  - snappy=1.1.8=he6710b0_0
   - sniffio=1.2.0=py38h578d9bd_1
+  - sqlalchemy=1.4.29=py38h497a2fe_0
   - sqlite=3.36.0=h9cd32fc_0
   - statsmodels=0.12.2=py38h5c078b8_0
+  - stevedore=3.5.0=py38h578d9bd_2
   - tbb=2020.2=h4bd325d_4
+  - tensorboard=2.7.0=pyhd8ed1ab_0
+  - tensorboard-data-server=0.6.0=py38h3e25421_1
+  - tensorboard-plugin-wit=1.8.0=pyh44b312d_0
   - terminado=0.10.1=py38h578d9bd_0
   - testpath=0.5.0=pyhd8ed1ab_0
   - threadpoolctl=2.1.0=py38h9791b0e_1
+  - thrift=0.11.0=py38h295c915_0
   - tk=8.6.10=h21135ba_1
   - torchaudio=0.9.0=py38
+  - torchmetrics=0.6.2=pyhd8ed1ab_0
   - torchvision=0.10.0=py38_cu111
   - tornado=6.1=py38h497a2fe_1
+  - tqdm=4.62.3=pyhd8ed1ab_0
   - traitlets=5.0.5=py_0
+  - typing-extensions=3.10.0.0=hd8ed1ab_0
   - typing_extensions=3.10.0.0=pyha770c72_0
   - umap-learn=0.5.1=py38h578d9bd_1
+  - uriparser=0.9.3=he6710b0_1
   - urllib3=1.26.6=pyhd8ed1ab_0
+  - utf8proc=2.6.1=h27cfd23_0
   - wcwidth=0.2.5=pyh9f0ad1d_2
   - webencodings=0.5.1=py_1
   - websocket-client=0.57.0=py38h578d9bd_4
+  - werkzeug=2.0.1=pyhd8ed1ab_0
   - wheel=0.37.0=pyhd8ed1ab_0
   - xorg-libxau=1.0.9=h7f98852_0
   - xorg-libxdmcp=1.1.3=h7f98852_0
   - xz=5.2.5=h516909a_1
+  - yaml=0.2.5=h516909a_0
+  - yarl=1.7.2=py38h497a2fe_1
   - zeromq=4.3.4=h9c3ff4c_0
   - zipp=3.5.0=pyhd8ed1ab_0
   - zlib=1.2.11=h516909a_1010
@@ -188,8 +272,8 @@ dependencies:
   - pip:
     - adjusttext==0.7.3
     - asteval==0.9.25
+    - dill==0.3.4
     - fastdtw==0.3.4
-    - future==0.18.2
     - igraph==0.9.8
     - leiden==1.0.1
     - leidenalg==0.8.8
@@ -198,6 +282,7 @@ dependencies:
     - lxml==4.6.3
     - networkx==2.6.2
     - nvidia-htop==1.0.5
+    - path-explain==0.0.7
     - progressbar2==3.53.1
     - pyactigraphy==1.0
     - pyexcel==0.6.7
